updated styling; home and index content;

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
-<h2 class="bgheader">dev!</h2>
-<p>Sample of work I've done in web design, development, and other programming.
+<h2 class="bgheader">home!</h2>
+<p>Welcome to my homepage.<br/>
+Don't think you can have everything you want.
 </p>
-<ul>
-	<li><a href="/dev/zengarden-sample.html">CSS Zen Garden</a></li>
-	<li><a href="/dev/rotator.html">Rotating Input fields</a></li>
-<ul>
+<p id="tryagain">
+
+</p>
