--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             function getPage(selector) {
                 try {      
 					var curHash = String(document.location).split("#")[1];
-					var newHash = selector.split("#")[1]
-					console.log(curHash)
-					console.log(newHash)
+					var newHash = selector.split("#")[1];
 					if (curHash != newHash) {
 					
 						
@@ -70,6 +68,7 @@
                     getPage(hash);
                 } else {
                     document.location.href += "#home";
+					getPage("#home");
                 }
                 $("span.navspan a").click(function() {
                     //alert();
@@ -78,9 +77,6 @@
                 });
 				$("#face1").addClass("front")
 				$("#face2").addClass("back")
-				$(".page").click(function() {
-					//flip();
-				})
             });
         </script>
     </head>
@@ -96,16 +92,10 @@
 <div id="content">
     <div class="page" id="face1">
         <h2 class="bgheader">home!</h2>
-        <p>
-		This is the front
-		Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-		</p>
-    </div><div class="page" id="face2">
-        <p id="p1">
-		This is the back!
-		Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
 
-        </p>
+    </div><div class="page" id="face2">
+		<p> Welcome!
+		</p>
     </div>
 </div>
 <div id="footer">
